# nft-etl-nyu

./: .gitignore  README.md  etherscan_collector.py  opensea_collector.py  punks_collector.py  pyproject.toml  rari_collector.py
data_visualization/: all_nodes.csv  data_visualization.txt  relationships.csv
lib/: web3_eth.py
